@@ -245,7 +245,6 @@ public class JCpgConfig {
 						
 					} catch (Exception e) {
 						
-						e.printStackTrace();
 						System.out.println("JCpgUserManager: couldn't load server configuration");
 						
 					}
@@ -254,7 +253,6 @@ public class JCpgConfig {
 	
 			} catch (SQLException e) {
 	
-				e.printStackTrace();
 				System.out.println("JCpgConfig: Couldn't extract from sql query result");
 	
 			}
@@ -297,7 +295,6 @@ public class JCpgConfig {
 					
 				} catch (JDOMException e) {
 					
-					e.printStackTrace();
 					System.out.println("JCpgUserManager: couldn't load usercfg.xml");
 					
 				}
