@@ -192,7 +192,6 @@ public class JCpgPictureResizer{
 			
 		} catch (IOException e) {
 			
-			e.printStackTrace();
 			System.out.println("JCpgPictureResizer: Couldn't resize picture: " + getPath());
 			
 		}
@@ -247,7 +246,6 @@ public class JCpgPictureResizer{
 			
 		} catch (IOException e) {
 			
-			e.printStackTrace();
 			System.out.println("JCpgPictureResizer: couldn't read/write image to make thumb");
 			
 		}
