@@ -239,7 +239,6 @@ public class JCpgGallerySaver{
 				
 			} catch (JDOMException e) {
 				
-				e.printStackTrace();
 				System.out.println("JCpgGallery: couldn't load gallery.xml");
 				
 			}
@@ -417,7 +416,7 @@ public class JCpgGallerySaver{
 			
 		}catch(Exception e){
 			
-			e.printStackTrace();
+			System.out.println("JCpgGallerySaver: couldn't save to xml");
 			
 		}
 
